[tool.poetry]
name = "dyndns"
version = "0.1.0"
description = ""
authors = ["Basile Dura <basile@bdura.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.24.1"
typer = "^0.9.0"
pydantic = "^2.2.1"
tomli = "^2.0.1"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
mypy = "^1.5.1"
ruff = "^0.0.285"

[tool.poetry.scripts]
dyndns = 'dyndns.cli:app'


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
